2008-11-12 Ingo Renner  <ingo@typo3.org>

	* fixed naming of the widget widget
	* added a last visitors widget to the user profile
	* added a new index to the relations table
	* changed the type of some fields for the relations table

2008-11-12 Frank Naegler  <typo3@naegler.net>

	* added hook connector to the profile model
	* added interface tx_community_UserProfileProvider

2008-11-11 Ingo Renner  <ingo@typo3.org>

	* added reloading to the flexform

2008-11-11 Frank Naegler  <typo3@naegler.net>

	* added css class names to the userProfile.profileActionsWidget

2008-11-10 Frank Naegler  <typo3@naegler.net>

	* change pi_linkTP to pi_linkToPage in the profile actions, all request should go the userProfile
	* added cObj viewhelper to userlist

2008-11-09 Frank Naegler  <typo3@naegler.net>

	* added date view helper to the userList view
	* added subpart switch for empty result list to the userList view
	* added result counter as variable to the userList view

2008-11-07 Frank Naegler  <typo3@naegler.net>

	* change getFirstname to getNickname in the profileActionWidget, maybe this should be set by config later.

2008-11-06 Ingo Renner  <ingo@typo3.org>

	* fixed bug #1770: adding label for the settings groups in the privacy apps
	* fixed bug #1776: LLL-Viewhelper: values can't be overwritten by TypoScript
	* fixed bug #1750: edit relationship does'nt work correctly

2008-11-05 Frank Naegler  <typo3@naegler.net>

	* change date viewhelper, so you can define an optional dateformat by marker

2008-11-03 Frank Naegler  <typo3@naegler.net>

	* adding a widgets-widget, with this widget you can collect some other widgets by the widget view helper. we need this for a widget, which shows ever the profile actions, but the image and personal information only, if the user has access to read them.
	* added constants for the default images

2008-10-28 Ingo Renner  <ingo@typo3.org>

	* added a check for existing friendship requests to the profile actions widget
